Changed to new Auth token

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "NzIwNjc4NzczMzE3NDM1NTUz.XuJyPg.HbqMAV8BaQX9V37gVjH1wrsy4oU",
+	"token": "NzIwNjc4NzczMzE3NDM1NTUz.XuJeaQ.AjqqnVUqtO_KHH9DZ1CW1w2ZPJM",
 	"dataFileName": "data/data.json",
 	"threeCardFileName": "data/threecard.json",
 	"recordsFileName": "data/records.json",
