--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
 {
     "env": {
-        "browser": true,
+        "browser": false,
         "commonjs": true,
         "es2021": true
     },
     "extends": [
-        "airbnb-base"
+        "standard"
     ],
     "parserOptions": {
         "ecmaVersion": 12
