Started Second Contest

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
 	"recordsFileName": "data/records.json",
 	"pathToCubeFiles": "./data/packs/cubes",
 	"imagesPath": "./data/images/",
-	"started": false,
+	"started": true,
 	"prefix": "//",
 	"timeBetweenRefresh": 15,
 	"scryfallRequestDelayTime": 10000,
