--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "simple-get": "^4.0.0",
+    "text-table": "^0.2.0",
     "winston": "^3.3.3"
   },
   "scripts": {
