--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PonderKoKo/KoKoBot.git"
+    "url": "git+https://github.com/PonderKoKo/KoKoBot.git"
   },
   "keywords": [
     "spoilers",
@@ -37,5 +37,12 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/PonderKoKo/KoKoBot/issues"
+  },
+  "homepage": "https://github.com/PonderKoKo/KoKoBot#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
