--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,12 @@
         "es2021": true
     },
     "extends": [
-        "standard"
+        "airbnb"
     ],
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
+        "quotes": ["error", "single", { "avoidEscape": true }]
     }
 }
